appId: com.gymrats.mobile
---
- launchApp
- assertVisible: "Ajustes"
- tapOn: "Ajustes"
- scrollUntilVisible:
    element: "Salvar ambiente e abrir app"
    direction: DOWN
- assertVisible: "Salvar ambiente e abrir app"
- assertVisible: "Entrar com token"
- tapOn: "Voltar"
